Fixed bug with button size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -454,7 +454,7 @@ hr {
   height: 5rem;
   padding-left: 3rem !important;
   padding-right: 3rem !important; }
-  @media only screen and (max-width: 400px) {
+  @media only screen and (max-width: 700px) {
     .food-menu__btn {
       width: 70vw;
       height: 8rem; } }
