--- a/sass/layout/_food-menu.scss
+++ b/sass/layout/_food-menu.scss
@@ -21,7 +21,7 @@
     margin-top: 9rem;
   }
   &__btn {
-    @media only screen and (max-width: 400px) {
+    @media only screen and (max-width: 700px) {
       width: 70vw;
       height: 8rem;
     }
